--- a/credit.ipynb
+++ b/credit.ipynb
@@ -250,7 +250,7 @@
    "source": [
     "data = pd.read_csv('CC GENERAL.csv')\n",
     "print(data.shape)\n",
-    "data.head()"
+    "data.head()\n"
    ]
   },
   {
